propertee-core/src/test/resources/tests/74_function_ignore.expected
Runtime error: Runtime Error at line 2:4: 'SHELL' is not available in this environment
