propertee-core/src/test/resources/tests/74_function_ignore.tee
// Test: ignored function produces runtime error
x = SHELL("echo hello")
PRINT(x)
